hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_passing_map1.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.
function expect(Map<string,bool> $m):void { }
function testit():void {
  $m = Map<arraykey,bool>{ 'a' => true };
  hh_show($m);
  expect($m);
}
